--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
         <div class="nav_large">
           <ul id="list_large">
-          <li><a href="index-2.html" class="nav_large_text">HOME</a></li>
+          <li><a href="index.html" class="nav_large_text">HOME</a></li>
           <li><a href="#work" class="nav_large_text scroll">WORK</a></li>
           <li><a href="#about" class="nav_large_text scroll">ABOUT</a></li>
           <li><a href="#connect" class="nav_large_text scroll">CONTACT</a></li>
