--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
         </div>
       <!-- page 1 -->
       <div class="wrapper colored" id="wrapper">
-        <a href="index-2.html">
-        <img class="psbLogo psbLogo_2" src="./images/logo.png" alt="PSB Logo" id="logo">
+        <a href="index.html">
+        <img class="psbLogo psbLogo_2" src="resources/gitHubImages/logo.png" alt="PSB Logo" id="logo">
         </a>
         <div class="text_2_div">
           <h1 class="text_2">HEL<br>LO,</h1>
@@ -250,9 +250,9 @@
     <ul id="slideshow" class="cycle-slideshow" data-cycle-slides="li" data-cycle-fx="scrollHorz" data-cycle-pause-on-hover="true" data-cycle-speed="600" data-cycle-timeout="2000">
 
       <a id="prev" class="prev cycle-prev text-white" onclick="plusSlides(-1)">&#10094;</a>
-      <li><a href="https://www.youtube.com/watch?v=OuvTI-1hKaE" target="_blank"><img src="file:///Users/haanibokhari/Downloads/experii.jpg" class="filmImg film_size pS"></img></a></li>
-      <li><a href="https://www.youtube.com/watch?v=agq4ATUztes" target="_blank"><img src="file:///Users/haanibokhari/Downloads/experii2.jpg" class="filmImg2 film_size pS" pS><</img></a></li>
-      <li><a href="https://www.youtube.com/watch?v=et-P00sOCqc" target="_blank"><img src="file:///Users/haanibokhari/Downloads/experii3.jpg" class="filmImg3 film_size pS"></img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=OuvTI-1hKaE" target="_blank"><img src="resources/gitHubImages/experii.jpg" class="filmImg film_size pS"></img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=agq4ATUztes" target="_blank"><img src="resources/gitHubImages/experii2.jpg" class="filmImg2 film_size pS" pS><</img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=et-P00sOCqc" target="_blank"><img src="resources/gitHubImages/experii3.jpg" class="filmImg3 film_size pS"></img></a></li>
       <p class="filmPara text-white text-center">These are some of the <br> films I made.<br> Click on the above picture, please.</p>
        <a id="next" class="next cycle-next text-white" onclick="plusSlides(1)">&#10095;</a>
       </ul>
