--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <!-- back to top for large screens -->
           <div class="back_to_top">
           <a href="#wrapper" class="scroll">
-          <div class="navbar_2 navbar_back_to_top animated">
+          <div class="navbar_2_to_top navbar_2 navbar_back_to_top animated">
             <div class="first first_cross"></div>
             <div class="second second_cross"></div>
             <div class="third third_cross"></div>
@@ -321,7 +321,7 @@
 
 
 <!-- SOME JAVASCRIPT FUN page5 -->
-    <div class="demo-1">
+    <div class="demo-1 jScontainer">
       <div class="content">
         <div id="large-header" class="large-header">
           <canvas id="demo-canvas"></canvas>
