--- a/index.html
+++ b/index.html
@@ -247,15 +247,17 @@
   <div class="film">
     <h2 class="filmText">Films & <br/> Videos. <br/>2017</h2>
     <h3 class="filmTitle">Bokhari Paras</h3>
+    <div id="center_film_img">
     <ul id="slideshow" class="cycle-slideshow" data-cycle-slides="li" data-cycle-fx="scrollHorz" data-cycle-pause-on-hover="true" data-cycle-speed="600" data-cycle-timeout="2000">
 
       <a id="prev" class="prev cycle-prev text-white" onclick="plusSlides(-1)">&#10094;</a>
-      <li><a href="https://www.youtube.com/watch?v=OuvTI-1hKaE" target="_blank"><img src="resources/gitHubImages/experii.jpg" class="filmImg film_size pS"></img></a></li>
-      <li><a href="https://www.youtube.com/watch?v=agq4ATUztes" target="_blank"><img src="resources/gitHubImages/experii2.jpg" class="filmImg2 film_size pS" pS><</img></a></li>
-      <li><a href="https://www.youtube.com/watch?v=et-P00sOCqc" target="_blank"><img src="resources/gitHubImages/experii3.jpg" class="filmImg3 film_size pS"></img></a></li>
-      <p class="filmPara text-white text-center">These are some of the <br> films I made.<br> Click on the above picture, please.</p>
+      <li><a href="https://www.youtube.com/watch?v=OuvTI-1hKaE" target="_blank"><img src="resources/gitHubImages/experii.jpg" class="filmImg film_size pS_1"></img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=agq4ATUztes" target="_blank"><img src="resources/gitHubImages/experii2.jpg" class="filmImg2 film_size pS_1" pS><</img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=et-P00sOCqc" target="_blank"><img src="resources/gitHubImages/experii3.jpg" class="filmImg3 film_size pS_1"></img></a></li>
+      <p class="filmPara text-white">These are some of the <br> films I made.<br> Click on the above picture, please.</p>
        <a id="next" class="next cycle-next text-white" onclick="plusSlides(1)">&#10095;</a>
       </ul>
+      </div>
    </div>
 
 
