Some changes and more mobile friendly

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
         </div>
         <h2 class="grid__item grid__item--name">Design & <br/> Photos. <br/>2017</h2>
         <h3 class="grid__item grid__item--title">Bokhari Paras</h3>
-        <p class="grid__item grid__item--text">A reet bobbydazzler a right toff Sherlock Queen Elizabeth Shakespeare</p>
+        <p class="grid__item grid__item--text">The list consists of some of the designs I made, as well as some of the photography I've previously done.</p>
       </div>
     </main>
    </div>
@@ -302,11 +302,11 @@
             <li song="Paras Bokhari - Lighter Machis.mp3" cover="cover1.jpg" artist="Paras Bokhari">Lighter Machis</li>
             <li song="Paras Bokhari - Duniya Re.mp3" cover="cover1.jpg" artist="Paras Bokhari">Duniya Re</li>
             <li song="Paras Bokhari - Kion.mp3" cover="cover1.jpg" artist="Paras Bokhari">Kion</li>
+            </ul>
             <br>
 
             <button type="button" class="btn-outline-info soundCloud">View more on <br>
             <a href="http://www.soundcloud.com/the-tamaashbeens" target="_blank"><img src="resources/gitHubImages/Soundcloud-logo.png" class="cloudImg" alt="Smiley face" height="50"></button></a>
-          </ul>
         </div>
     </div>
     </div>
