--- a/index.html
+++ b/index.html
@@ -216,19 +216,19 @@
       <div class="frame">
       </div>
       <div class="grid grid--layout-1 grid--current">
-        <div class="grid__item gallery-item img-1 gridOne" data-delay="150" data-direction="ttb" href='resources/gitHubImages/3.webp'></div>
-        <div class="grid__item gallery-item img-2 gridTwo" data-delay="300" data-direction="ttb" href='resources/gitHubImages/2.webp'></div>
-        <div class="grid__item gallery-item img-3" data-delay="200" data-direction="ttb" href='resources/gitHubImages/1.webp'></div>
-        <div class="grid__item gallery-item img-4" data-delay="40" data-direction="ttb" href='resources/gitHubImages/4.webp'></div>
-        <div class="grid__item gallery-item img-5" data-delay="70" data-direction="ttb" href='resources/gitHubImages/5.webp'></div>
-        <div class="grid__item gallery-item img-6" data-delay="100" data-direction="ttb" href='resources/gitHubImages/6.webp'></div>
-        <div class="grid__item gallery-item img-7" data-delay="250" data-direction="ttb" href='resources/gitHubImages/7.webp'></div>
-        <div class="grid__item gallery-item img-8" data-delay="350" data-direction="ttb" href='resources/gitHubImages/8.webp'></div>
-        <div class="grid__item gallery-item img-9" data-delay="400" data-direction="ttb" href='resources/gitHubImages/16.webp'></div>
-        <div class="grid__item gallery-item img-10" data-direction="ttb" href='resources/gitHubImages/10.webp'></div>
-        <div class="grid__item gallery-item img-11" data-direction="ttb" data-delay="20" href='resources/gitHubImages/11.webp'></div>
-        <div class="grid__item gallery-item img-12" data-direction="ttb" data-delay="500" href='resources/gitHubImages/12.webp' ></div>
-        <div class="grid__item gallery-item img-13" data-delay="120" data-direction="ttb" href='resources/gitHubImages/15.webp'></div>
+        <div class="grid__item gallery-item img-1 gridOne" data-delay="150" data-direction="ttb" href='resources/gitHubImages/3.jpg'></div>
+        <div class="grid__item gallery-item img-2 gridTwo" data-delay="300" data-direction="ttb" href='resources/gitHubImages/2.jpg'></div>
+        <div class="grid__item gallery-item img-3" data-delay="200" data-direction="ttb" href='resources/gitHubImages/1.jpg'></div>
+        <div class="grid__item gallery-item img-4" data-delay="40" data-direction="ttb" href='resources/gitHubImages/4.jpg'></div>
+        <div class="grid__item gallery-item img-5" data-delay="70" data-direction="ttb" href='resources/gitHubImages/5.jpg'></div>
+        <div class="grid__item gallery-item img-6" data-delay="100" data-direction="ttb" href='resources/gitHubImages/6.jpg'></div>
+        <div class="grid__item gallery-item img-7" data-delay="250" data-direction="ttb" href='resources/gitHubImages/7.jpg'></div>
+        <div class="grid__item gallery-item img-8" data-delay="350" data-direction="ttb" href='resources/gitHubImages/17.jpg'></div>
+        <div class="grid__item gallery-item img-9" data-delay="400" data-direction="ttb" href='resources/gitHubImages/16.jpg'></div>
+        <div class="grid__item gallery-item img-10" data-direction="ttb" href='resources/gitHubImages/10.jpg'></div>
+        <div class="grid__item gallery-item img-11" data-direction="ttb" data-delay="20" href='resources/gitHubImages/11.jpg'></div>
+        <div class="grid__item gallery-item img-12" data-direction="ttb" data-delay="500" href='resources/gitHubImages/12.jpg' ></div>
+        <div class="grid__item gallery-item img-13" data-delay="120" data-direction="ttb" href='resources/gitHubImages/15.jpg'></div>
         <div class="grid__item grid__item--nav grid__item--nav-prev" data-direction="ttb">
           <!-- <svg class="icon icon--nav-arrow"><use xlink:href="#icon-nav-arrow"></use></svg> -->
         </div>
