--- a/index.html
+++ b/index.html
@@ -248,15 +248,16 @@
     <h2 class="filmText">Films & <br/> Videos. <br/>2017</h2>
     <h3 class="filmTitle">Bokhari Paras</h3>
     <div id="center_film_img">
-    <ul id="slideshow" class="cycle-slideshow" data-cycle-slides="li" data-cycle-fx="scrollHorz" data-cycle-pause-on-hover="true" data-cycle-speed="600" data-cycle-timeout="2000">
-
+    <ul id="slideshow" class="cycle-slideshow" data-cycle-center-horz=true
+    data-cycle-center-vert=true data-cycle-slides="li" data-cycle-fx="scrollHorz" data-cycle-pause-on-hover="true" data-cycle-swipe=true
+    data-cycle-swipe-fx=scrollHorz data-cycle-speed="600" data-cycle-timeout="2000">
       <a id="prev" class="prev cycle-prev text-white" onclick="plusSlides(-1)">&#10094;</a>
       <li><a href="https://www.youtube.com/watch?v=OuvTI-1hKaE" target="_blank"><img src="resources/gitHubImages/experii.jpg" class="filmImg film_size pS_1"></img></a></li>
       <li><a href="https://www.youtube.com/watch?v=agq4ATUztes" target="_blank"><img src="resources/gitHubImages/experii2.jpg" class="filmImg2 film_size pS_1" pS><</img></a></li>
       <li><a href="https://www.youtube.com/watch?v=et-P00sOCqc" target="_blank"><img src="resources/gitHubImages/experii3.jpg" class="filmImg3 film_size pS_1"></img></a></li>
-      <p class="filmPara text-white">These are some of the <br> films I made.<br> Click on the above picture, please.</p>
        <a id="next" class="next cycle-next text-white" onclick="plusSlides(1)">&#10095;</a>
       </ul>
+      <p class="filmPara text-right text-center text-white mt-5">These are some of the films I made. Click on the above picture, please.</p>
       </div>
    </div>
 
@@ -265,7 +266,7 @@
 
 
       <!-- AUDIO page 5-->
-        <div class="musicBG clearfix container-fluid" id="musicBG">
+        <div class="musicBG container-fluid" id="musicBG">
         <div class="row">
         <div class="col-lg-6">
           <h1 class="audioText">Audio & <br> Sound. <br> 2017</h1>
@@ -422,6 +423,7 @@
       crossorigin="anonymous"></script>
     <script src="resources/js/main.js" type="text/javascript" charset="utf-8"></script>
     <script src="resources/js/jquery.cycle2.min.js"></script>
+    <script src="http://malsup.github.io/jquery.cycle2.center.js"></script>
     <script src="resources/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/imagesloaded.pkgd.min.js"></script>
     <script src="resources/js/revealer.js"></script>
