--- a/index.html
+++ b/index.html
@@ -423,7 +423,8 @@
       crossorigin="anonymous"></script>
     <script src="resources/js/main.js" type="text/javascript" charset="utf-8"></script>
     <script src="resources/js/jquery.cycle2.min.js"></script>
-    <script src="http://malsup.github.io/jquery.cycle2.center.js"></script>
+    <script src="resources/js/jquery.cycle2.center.min.js"></script>
+    <script src="resources/js/jquery.cycle2.swipe.js"></script>
     <script src="resources/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/imagesloaded.pkgd.min.js"></script>
     <script src="resources/js/revealer.js"></script>
