--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </div>
         </div>
         </div>
-        <div class="container bars">
+        <div class="container bars container-bars">
         <div class="bar-1"><span class="skillText">User Experience</span></div>
         <div class="graph-bar bar-2"><span class="skillText">HTML 5</span></div>
         <div class="graph-bar bar-3"><span class="skillText">CSS 3</span></div>
