--- a/Billy!/indexBilly.html
+++ b/Billy!/indexBilly.html
@@ -30,7 +30,7 @@
     <!-- /Cover Slideshow -->
     <!-- Header and Navigation -->
       <div class="header">
-        <img class="billyLogo animated" src="images/billy_logo_social.png" alt="billyLogo" id="logo">
+        <img class="billyLogo animated" src="resources/images/billy_logo_social.png" alt="billyLogo" id="logo">
         <!-- Navigation Toggled -->
         <div class="mobile-nav animated" id="mobile-menu">
           <ul id="list">
@@ -86,6 +86,7 @@
      <!-- /Blue and Red Borders -->
      <!-- Social Links -->
      </div>
+     <section class="next">
   <div class="footer">
     <ul class="nav justify-content-center">
        <li class="nav-item"><a href="#" class="nav-link pr-0"><i class="fa fa-pinterest fa-2x"></i></a></li>
@@ -106,6 +107,7 @@
         <li class="nav-item1 nav-footer text-center mt-4">2017 Paras Bokhari.</li>
       </ul>
   </div>
+  </section>
 
   <!-- /END HOMEPAGE CODE -->
 
