--- a/Billy!/indexBilly.html
+++ b/Billy!/indexBilly.html
@@ -77,8 +77,8 @@
   <i class="fa fa-circle text-white dot dot2" aria-hidden="true"></i>
   </div>
   <div class="wrapper-5">
-  <img src="file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Billy!/images/shout.png" alt="" class="shout">
-  <img src="file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Billy!/images/shout.png" alt="" class="shout2">
+  <img src="resources/images/shout.png" alt="" class="shout">
+  <img src="resources/images/shout.png" alt="" class="shout2">
   </div>
      <!-- /Cover Texts -->
      <!-- Blue and Red Borders -->
