--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <button class="reelButton reelFont reel_four_hover tail">VIEW PROJECT</button></a>
           </div>
           <div class="col-md-3 reelTwo reels mt-2">
-            <a href="carCrash/indexCrash.html">
+            <a href="carCrash/belong.html">
             <button class="reelButton reel_four_hover tail2">VIEW PROJECT</button></a>
           </div>
           <div class="col-md-3 reelThree reels mt-2">
