--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 
   <!-- CONTAINER FOR ALL PAGE -->
 
+      <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+      </div>
+
+
           <!-- navigation toggler -->
           <div class="wrapper_nav">
           <div class="navbar_2 animated">
@@ -427,6 +434,7 @@
     <script src="resources/js/jquery.cycle2.swipe.js"></script>
     <script src="resources/js/jquery.waypoints.min.js"></script>
     <script src="resources/js/imagesloaded.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="resources/js/revealer.js"></script>
     <script src="resources/js/demo.js"></script>
     <script>
