--- a/Billy!/indexBilly.html
+++ b/Billy!/indexBilly.html
@@ -25,6 +25,7 @@
         <div id="loader"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
+        <h1 class="text-center pre_logo">Paras Bokhari</h1>
       </div>
 
   <!-- START HOMEPAGE CODE -->
