--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <div id="loader"></div>
         <div class="loader-section section-left"></div>
         <div class="loader-section section-right"></div>
+        <h1 class="text-center pre_logo">Paras Bokhari</h1>
       </div>
 
 
