--- a/Shooter/indexShooter.html
+++ b/Shooter/indexShooter.html
@@ -7,7 +7,6 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-
             <!-- Font Awesome -->
     <script src="https://use.fontawesome.com/0ae03d2360.js"></script>
             <!-- style.css (Custom Styles) -->
@@ -23,6 +22,18 @@
   <body>
 
   <!-- START HOMEPAGE CODE -->
+            <div id="loader-wrapper">
+        <div id="loader"></div>
+        <div class="loader-section section-left"></div>
+        <div class="loader-section section-right"></div>
+        <h1 class="text-center pre_logo">Paras Bokhari</h1>
+      </div>
+
+      <div id="switch">
+        <h1 class="text-center switch_text">Oops, please switch to your desktop.</h1>
+      </div>
+
+
   <div id="score_div">
     Score: <span id="score">0</span>
   </div>
@@ -64,6 +75,7 @@
     <script src="resources/js/jquery.fullPage.min.js"></script>
 
     <script src="resources/js/mainShooter.js" type="text/javascript" charset="utf-8"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="lightbox/jquery.magnific-popup.min.js"></script>
