--- a/eagle/indexEagle.html
+++ b/eagle/indexEagle.html
@@ -22,6 +22,10 @@
   </head>
   <body>
 
+      <div id="switch">
+        <h1 class="text-center switch_text">Oops, please switch to your desktop.</h1>
+      </div>
+
   <!-- START HOMEPAGE CODE -->
   <div id="container">
     <div id="bird"></div>
