--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
     data-cycle-center-vert=true data-cycle-slides="li" data-cycle-fx="scrollHorz" data-cycle-pause-on-hover="true" data-cycle-swipe=true
     data-cycle-swipe-fx=scrollHorz data-cycle-speed="600" data-cycle-timeout="2000">
       <a id="prev" class="prev cycle-prev text-white" onclick="plusSlides(-1)">&#10094;</a>
-      <li><a href="https://www.youtube.com/watch?v=OuvTI-1hKaE" target="_blank"><img src="resources/gitHubImages/experii.jpg" class="filmImg film_size pS_1"></img></a></li>
-      <li><a href="https://www.youtube.com/watch?v=agq4ATUztes" target="_blank"><img src="resources/gitHubImages/experii2.jpg" class="filmImg2 film_size pS_1" pS><</img></a></li>
-      <li><a href="https://www.youtube.com/watch?v=et-P00sOCqc" target="_blank"><img src="resources/gitHubImages/experii3.jpg" class="filmImg3 film_size pS_1"></img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=OuvTI-1hKaE" target="_blank"><img src="resources/gitHubImages/experii-10.jpg" class="filmImg film_size pS_1"></img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=agq4ATUztes" target="_blank"><img src="resources/gitHubImages/experii2.png" class="filmImg2 film_size pS_1" pS><</img></a></li>
+      <li><a href="https://www.youtube.com/watch?v=et-P00sOCqc" target="_blank"><img src="resources/gitHubImages/experii3.png" class="filmImg3 film_size pS_1"></img></a></li>
        <a id="next" class="next cycle-next text-white" onclick="plusSlides(1)">&#10095;</a>
       </ul>
       <p class="filmPara text-right text-center text-white mt-5">These are some of the films I made. Click on the above picture, please.</p>
