--- a/index.html
+++ b/index.html
@@ -134,23 +134,23 @@
     <!-- PORTFOLIO Page 2-->
       <div class="portfolio ha-waypoint mb-4">
         <h1 class="display-2 text-center things">Things I have created</h1>
-        <p class="text-center lead">I’ve always been inspired by random things like smart infographics, beautiful photos, motivational quotes, master design pieces, and all sorts of quirky stuff</p>
+        <p class="text-center lead mb-4">I’ve always been inspired by random things like smart infographics, beautiful photos, motivational quotes, master design pieces, and all sorts of quirky stuff</p>
 
         <!-- REELS -->
           <div class="row">
-          <div class="col-md-3 reelOne reels mt-2">
+          <div class="col-md-3 reelOne reels">
             <a href="Shooter/indexShooter.html">
             <button class="reelButton reelFont reel_four_hover tail">VIEW PROJECT</button></a>
           </div>
-          <div class="col-md-3 reelTwo reels mt-2">
+          <div class="col-md-3 reelTwo reels">
             <a href="carCrash/indexCrash.html">
             <button class="reelButton reel_four_hover tail2">VIEW PROJECT</button></a>
           </div>
-          <div class="col-md-3 reelThree reels mt-2">
+          <div class="col-md-3 reelThree reels">
             <a href="Billy!/indexBilly.html">
             <button class="reelButton invert reel_four_hover tail2">VIEW PROJECT</button></a>
           </div>
-         <div class="col-md-3 reelFour reels mt-2">
+         <div class="col-md-3 reelFour reels">
             <a href="Danny/indexDanny.html">
             <button class="reelButton reel reel_four_hover tail2">VIEW PROJECT</button></a>
           </div>
