--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </a>
         <div class="text_2_div">
           <h1 class="text_2">HEL<br>LO,</h1>
-          <p class="text_2_para">My name is Paras Bokhari, <br> I am a UX/UI developer based in Chicago, IL.</p>
+          <p class="text_2_para">My name is Paras Bosaskhari, <br> I am a UX/UI developer based in Chicago, IL.</p>
         </div>
         <div class="nav_large">
           <ul id="list_large">
