--- a/Danny/indexDanny.html
+++ b/Danny/indexDanny.html
@@ -35,9 +35,9 @@
           <h3 class="heading about">about</h3>
        </div>
      <div class="cover">
-       <div class="cover-image wrapper-cover">
-       <img id="s1" src="file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Danny/images/danny3.jpg" alt="" class="slide slide-1">
-       <img id="s2" src="file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Danny/images/danny4.jpg" alt="" class="slide slide-2">
+       <div class="cover-image wrapper-cover img-fluid">
+       <img id="s1" src="resources/images/danny3.jpg" alt="" class="slide slide-1 img-fluid">
+       <img id="s2" src="resources/images/danny4.jpg" alt="" class="slide slide-2 img-fluid">
       </div>
      <div class="wrapper-3">
       <h3 class="para text-1">Promises, and <br> deliverance.</h3>
@@ -60,8 +60,8 @@
     <div class="wrapper-new-content">
       <!-- Navigation -->
       <div class="wrapper-new-nav">
-        <img src="file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Danny/images/logoDanny.png" alt="" class="logoDanny">
-        <h3 class="heading new-nav-heading">MAGNIFYING</h3>
+        <img src="resources/images/logoDanny.png" alt="" class="logoDanny">
+        <h3 class="heading new-nav-heading experiment">MAGNIFYING</h3>
         <div class="wrapper-nav-2">
           <div class="navbar-2">
             <div class="first-cross"></div>
@@ -95,7 +95,7 @@
     <div class="wrapper-new-content">
       <!-- Navigation -->
       <div class="wrapper-new-nav">
-        <img src="file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Danny/images/logoDanny.png" alt="" class="logoDanny invert-color">
+        <img src="resources/images/logoDanny.png" alt="" class="logoDanny invert-color">
         <h3 class="heading new-nav-heading invert-color">FOREVER</h3>
         <div class="wrapper-nav-2 invert-color">
           <div class="navbar-2">
@@ -132,7 +132,6 @@
   <section class="page4">
   <div class="wrapper-new-page page-4" id="page-4">
     <div class="wrapper-new-content page-4-content">
-        <img src="file:///Users/haanibokhari/Desktop/ALL%20OF%20MY%20APPS/My%20Portfolio/Danny/images/logoDanny.png" alt="" class="logoDanny page-4-logo">
         <h3 class="heading new-nav-heading ux-text">a user experience demonstration <br> <br> created by <br><br> paras bokhari <br> 2017.</h3>
     </div>
   </div>
