--- a/index.html
+++ b/index.html
@@ -434,11 +434,11 @@
     <script src="resources/js/jquery.cycle2.center.min.js"></script>
     <script src="resources/js/jquery.cycle2.swipe.js"></script>
     <script src="resources/js/jquery.waypoints.min.js"></script>
-    <script src="resources/js/imagesloaded.pkgd.min.js"></script>
+<!--     <script src="resources/js/imagesloaded.pkgd.min.js"></script> -->
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-    <script src="resources/js/revealer.js"></script>
-    <script src="resources/js/demo.js"></script>
-    <script>
+<!--     <script src="resources/js/revealer.js"></script> -->
+<!--     <script src="resources/js/demo.js"></script> -->
+<!--     <script>
     {
       const DOM = {};
       DOM.body = document.body;
@@ -452,10 +452,10 @@
         });
       });
     }
-    </script>
+    </script> -->
     <script src="resources/js/TweenLite.min.js"></script>
     <script src="resources/js/EasePack.min.js"></script>
-    <script src="resources/js/rAF.js"></script>
+<!--     <script src="resources/js/rAF.js"></script> -->
     <script src="resources/js/demo-1.js"></script>
     <script src="lightbox/jquery.magnific-popup.min.js"></script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
@@ -476,7 +476,7 @@
       origin: 'left'
     });
   </script>
-     <script>
+<!--      <script>
       $('.nav-link').on('click', function(event) {
     var target = $(this.getAttribute('href'));
     if( target.length ) {
@@ -486,7 +486,7 @@
         }, 1000);
     }
 });
- </script>
+ </script> -->
 
   </body>
 </html>
