some fallbacks and optimization

--- a/Danny/indexDanny.html
+++ b/Danny/indexDanny.html
@@ -25,24 +25,25 @@
   <!-- START HOMEPAGE CODE -->
   <!-- PAGE 1 -->
   <div id="fullpage">
+
     <div class="section" id="page-1">
       <section class="page1">
-       <div class="wrapper-Y">
-        <div class="wrapper">
-          <h3 class="heading news">Newsblog</h1>
-        </div>
-       <div class="wrapper-2">
-          <h3 class="heading about">about</h3>
-       </div>
-     <div class="cover">
-       <div class="cover-image wrapper-cover img-fluid">
-       <img id="s1" src="resources/images/danny3.jpg" alt="" class="slide slide-1 img-fluid">
-       <img id="s2" src="resources/images/danny4.jpg" alt="" class="slide slide-2 img-fluid">
-      </div>
-     <div class="wrapper-3">
-      <h3 class="para text-1">Promises, and <br> deliverance.</h3>
-     </div>
-    <div class="wrapper-4">
+         <div class="wrapper-Y">
+           <div class="wrapper">
+              <h3 class="heading news">Newsblog</h1>
+           </div>
+           <div class="wrapper-2">
+             <h3 class="heading about">about</h3>
+           </div>
+         <div class="cover">
+            <div class="cover-image wrapper-cover img-fluid">
+              <img id="s1" src="resources/images/danny3.jpg" alt="" class="slide slide-1 img-fluid">
+              <img id="s2" src="resources/images/danny4.jpg" alt="" class="slide slide-2 img-fluid">
+            </div>
+         <div class="wrapper-3">
+          <h3 class="para text-1">Promises, and <br> deliverance.</h3>
+         </div>
+      <div class="wrapper-4">
       <h3 class="para text-2">We know, and.</h3>
       <h3 class="para text-3 ml-5">We Grow</h3>
       <h3 class="para text-4">bright stars.</h3>
@@ -130,7 +131,7 @@
     <!-- PAGE 4 -->
     <div class="section">
   <section class="page4">
-  <div class="wrapper-new-page page-4" id="page-4">
+  <div class="wrapper-new-page page-4 bg-grey" id="page-4">
     <div class="wrapper-new-content page-4-content">
         <h3 class="heading new-nav-heading ux-text">a user experience demonstration <br> <br> created by <br><br> paras bokhari <br> 2017.</h3>
     </div>
@@ -169,7 +170,6 @@
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="resources/js/jquery.fullPage.min.js"></script>
 
     <script src="resources/js/mainDanny.js" type="text/javascript" charset="utf-8"></script>
