--- a/index.html
+++ b/index.html
@@ -223,24 +223,24 @@
     <main>
       <div class="frame">
       </div>
-      <div class="grid grid--layout-1 grid--current">
-        <div class="grid__item gallery-item img-1 gridOne" data-delay="150" data-direction="ttb" href='resources/gitHubImages/3.jpg'></div>
-        <div class="grid__item gallery-item img-2 gridTwo" data-delay="300" data-direction="ttb" href='resources/gitHubImages/2.jpg'></div>
-        <div class="grid__item gallery-item img-3" data-delay="200" data-direction="ttb" href='resources/gitHubImages/1.jpg'></div>
-        <div class="grid__item gallery-item img-4" data-delay="40" data-direction="ttb" href='resources/gitHubImages/4.jpg'></div>
-        <div class="grid__item gallery-item img-5" data-delay="70" data-direction="ttb" href='resources/gitHubImages/5.jpg'></div>
-        <div class="grid__item gallery-item img-6" data-delay="100" data-direction="ttb" href='resources/gitHubImages/6.jpg'></div>
-        <div class="grid__item gallery-item img-7" data-delay="250" data-direction="ttb" href='resources/gitHubImages/7.jpg'></div>
-        <div class="grid__item gallery-item img-8" data-delay="350" data-direction="ttb" href='resources/gitHubImages/17.jpg'></div>
-        <div class="grid__item gallery-item img-9" data-delay="400" data-direction="ttb" href='resources/gitHubImages/16.jpg'></div>
-        <div class="grid__item gallery-item img-10" data-direction="ttb" href='resources/gitHubImages/10.jpg'></div>
-        <div class="grid__item gallery-item img-11" data-direction="ttb" data-delay="20" href='resources/gitHubImages/11.jpg'></div>
-        <div class="grid__item gallery-item img-12" data-direction="ttb" data-delay="500" href='resources/gitHubImages/12.jpg' ></div>
-        <div class="grid__item gallery-item img-13" data-delay="120" data-direction="ttb" href='resources/gitHubImages/15.jpg'></div>
-        <div class="grid__item grid__item--nav grid__item--nav-prev" data-direction="ttb">
+      <div class="grid grid_fallback grid--layout-1 grid--current">
+        <div class="grid__item grid__item_fallback gallery-item img-1 gridOne" data-delay="150" data-direction="ttb" href='resources/gitHubImages/3.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-2 gridTwo" data-delay="300" data-direction="ttb" href='resources/gitHubImages/2.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-3" data-delay="200" data-direction="ttb" href='resources/gitHubImages/1.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-4" data-delay="40" data-direction="ttb" href='resources/gitHubImages/4.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-5" data-delay="70" data-direction="ttb" href='resources/gitHubImages/5.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-6" data-delay="100" data-direction="ttb" href='resources/gitHubImages/6.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-7" data-delay="250" data-direction="ttb" href='resources/gitHubImages/7.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-8" data-delay="350" data-direction="ttb" href='resources/gitHubImages/17.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-9" data-delay="400" data-direction="ttb" href='resources/gitHubImages/16.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-10" data-direction="ttb" href='resources/gitHubImages/10.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-11" data-direction="ttb" data-delay="20" href='resources/gitHubImages/11.jpg'></div>
+        <div class="grid__item grid__item_fallback gallery-item img-12" data-direction="ttb" data-delay="500" href='resources/gitHubImages/12.jpg' ></div>
+        <div class="grid__item grid__item_fallback gallery-item img-13" data-delay="120" data-direction="ttb" href='resources/gitHubImages/15.jpg'></div>
+        <div class="grid__item grid__item_fallback grid__item--nav grid__item--nav-prev" data-direction="ttb">
           <!-- <svg class="icon icon--nav-arrow"><use xlink:href="#icon-nav-arrow"></use></svg> -->
         </div>
-        <div class="grid__item grid__item--nav grid__item--nav-next" data-direction="ttb">
+        <div class="grid__item grid__item_fallback grid__item--nav grid__item--nav-next" data-direction="ttb">
      <!--      <svg class="icon icon--nav-arrow"><use xlink:href="#icon-nav-arrow"></use></svg> -->
         </div>
         <h2 class="grid__item grid__item--name">Design & <br/> Photos. <br/>2017</h2>
@@ -323,7 +323,7 @@
 
       <br>
 
-      <p class="audioPara2 text-center">They are in Urdu, though. <br> So you might not understand them <br> <br> oh and, I created this Music Player myself :)</p>
+      <p class="audioPara2 text-center">They are in Urdu, though. <br> So you might not understand them <br> <br> oh and, it takes a minute to load the tracks, they are mp3s. So please bear with me :)</p>
       <hr>
         </div>
 
@@ -436,23 +436,6 @@
     <script src="resources/js/jquery.waypoints.min.js"></script>
 <!--     <script src="resources/js/imagesloaded.pkgd.min.js"></script> -->
     <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
-<!--     <script src="resources/js/revealer.js"></script> -->
-<!--     <script src="resources/js/demo.js"></script> -->
-<!--     <script>
-    {
-      const DOM = {};
-      DOM.body = document.body;
-      DOM.gridElems = Array.from(document.querySelectorAll('.grid'));
-
-      imagesLoaded(DOM.body, {background: true} , () => {
-        DOM.body.classList.remove('loading');
-        new Slideshow(DOM.gridElems, {
-          hasTilt: true,
-          tilt: {maxTranslationX: 25, maxTranslationY: 25}
-        });
-      });
-    }
-    </script> -->
     <script src="resources/js/TweenLite.min.js"></script>
     <script src="resources/js/EasePack.min.js"></script>
 <!--     <script src="resources/js/rAF.js"></script> -->
@@ -476,17 +459,6 @@
       origin: 'left'
     });
   </script>
-<!--      <script>
-      $('.nav-link').on('click', function(event) {
-    var target = $(this.getAttribute('href'));
-    if( target.length ) {
-
-        $('html, body').stop().animate({
-            scrollTop: target.offset().top
-        }, 1000);
-    }
-});
- </script> -->
 
   </body>
 </html>
