--- a/Danny/indexDanny.html
+++ b/Danny/indexDanny.html
@@ -40,6 +40,7 @@
               <img id="s1" src="resources/images/danny3.jpg" alt="" class="slide slide-1 img-fluid">
               <img id="s2" src="resources/images/danny4.jpg" alt="" class="slide slide-2 img-fluid">
             </div>
+            </div>
          <div class="wrapper-3">
           <h3 class="para text-1">Promises, and <br> deliverance.</h3>
          </div>
@@ -131,7 +132,7 @@
     <!-- PAGE 4 -->
     <div class="section">
   <section class="page4">
-  <div class="wrapper-new-page page-4 bg-grey" id="page-4">
+  <div class="wrapper-new-page page-4" id="page-4">
     <div class="wrapper-new-content page-4-content">
         <h3 class="heading new-nav-heading ux-text">a user experience demonstration <br> <br> created by <br><br> paras bokhari <br> 2017.</h3>
     </div>
@@ -170,10 +171,11 @@
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="http://code.jquery.com/jquery-1.11.0.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="resources/js/jquery.fullPage.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<!--     <script src="resources/js/jquery.fullPage.min.js"></script> -->
 
     <script src="resources/js/mainDanny.js" type="text/javascript" charset="utf-8"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
     <script src="lightbox/jquery.magnific-popup.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
