--- a/index.html
+++ b/index.html
@@ -330,6 +330,15 @@
 
       <!-- /AUDIO -->
 
+<!--       <div id="resume">
+        <h1 class="resume_text text-center pt-4">{ my resume. }</h1>
+        <div id="resume_2">
+          <div id="resume_line_1"></div>
+          <div id="resume_image_1"></div>
+        </div>
+
+      </div> -->
+
 
 <!-- SOME JAVASCRIPT FUN page5 -->
     <div class="demo-1 jScontainer">
