homepage fixes done

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <!-- back to top for large screens -->
           <div class="back_to_top">
           <a href="#wrapper" class="scroll">
-          <div class="navbar_2_to_top navbar_2 navbar_back_to_top animated">
+          <div class="navbar_2_to_top navbar_2 fixed-bottom  navbar_back_to_top animated">
             <div class="first first_cross"></div>
             <div class="second second_cross"></div>
             <div class="third third_cross"></div>
