--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <button class="reelButton reelFont reel_four_hover tail">VIEW PROJECT</button></a>
           </div>
           <div class="col-md-3 reelTwo reels">
-            <a href="carCrash/index.html">
+            <a href="carCrash/indexCrash.html">
             <button class="reelButton reel_four_hover tail2">VIEW PROJECT</button></a>
           </div>
           <div class="col-md-3 reelThree reels">
