--- a/CarCrash/indexCrash.html
+++ b/CarCrash/indexCrash.html
@@ -23,6 +23,12 @@
   <body>
 
   <!-- START HOMEPAGE CODE -->
+
+      <div id="switch">
+        <h1 class="text-center switch_text">Oops, please switch to your desktop.</h1>
+      </div>
+
+
    <div id="score-div">
      Score: <span id="score">0</span>
    </div>
