--- a/Danny/indexDanny.html
+++ b/Danny/indexDanny.html
@@ -98,7 +98,7 @@
       <!-- Navigation -->
       <div class="wrapper-new-nav">
         <img src="resources/images/logoDanny.png" alt="" class="logoDanny invert-color">
-        <h3 class="heading new-nav-heading invert-color">FOREVER</h3>
+        <h3 class="heading new-nav-heading invert-color mt-3">FOREVER</h3>
         <div class="wrapper-nav-2 invert-color">
           <div class="navbar-2">
             <div class="first-cross"></div>
