danny fixed most probably complete

--- a/Danny/indexDanny.html
+++ b/Danny/indexDanny.html
@@ -37,8 +37,8 @@
            </div>
          <div class="cover">
             <div class="cover-image wrapper-cover img-fluid">
-              <img id="s1" src="resources/images/danny3.jpg" alt="" class="slide slide-1 img-fluid">
-              <img id="s2" src="resources/images/danny4.jpg" alt="" class="slide slide-2 img-fluid">
+              <img id="s1" src="resources/images/danny3_01.jpg" alt="" class="slide slide-1 img-fluid">
+              <img id="s2" src="resources/images/danny4_01.jpg" alt="" class="slide slide-2 img-fluid">
             </div>
             </div>
          <div class="wrapper-3">
