--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <div id="form-messages"></div>
 
         <div class="container-2">
-        <form id="ajax-contact" method="post" action="mailer.php">
+        <form id="ajax-contact">
           <div class="form-group">
             <label for="name">Name</label>
             <input type="text" class="form-control" id="name" name="name" required>
