Finally done. Ofcourse not.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
           <br>
 
         <p class="paraWorkTwo pb-2">
-        My interests do, however, extend beyond websites, and I love creating brand logos, newsletters and print design.</p>
+        I'm a magician. The trick is simple. You learn something, from the greats, for a very long period of time. Keep failing. Keep succeeding. Keep failing, again. And one day, not pretty far away. Become better than the greats. P.S, I don't look as bad as the pictures below. I tend to stay neat. </p>
         </p>
         </div>
         </div>
@@ -168,31 +168,32 @@
         <div class="col-lg-4">
         <p class="paraAboutTwo pt-4">
 
-        I’ve designed all sorts of projects for all sorts of clients, and the only thing that all my final products had in common is that they had to sell, market and promote. The only way to achieve this is by creating masterly, finished products that convey professionalism and user satisfaction. Every single detail matters - structure, typography, images, proportions, colors, patterns, lines, edges... All should be synchronized to complete the maximum UX.</p>
+        I'm a learner. By that, what I mean is, that there is nothing, absolutely nothing, I cannot do. The process is simple, extremely simple. If I want to do something, I learn it from the greats, and eventually, at some point of time become greater. I've done web design throughout my life. Soon not before, I finally realised that I’m way too interested in the technical part of the process, and calling myself a “nerd” sounded more like a compliment than an insult. Someone really smart once told me, in order to understand your interests, you have to differentiate between that line, that very thin line, between the essence of 'doing', and 'crafting'. When I look at a web application, I always feel how much better I could have 'crafted' the same exact thing. Because when you craft something, you spend nights and nights on those minor details, which no one would actually care about. Somewhere deep down, I love that process.</p>
 
           <br>
 
         <p class="paraAboutTwo">
-        I believe that one of my strongest points is that I always put myself not only in my client’s shoes, but also in the shoes of the end user. Every project has its target audience with its own needs, expectations, taste etc.
+        I started my professional career in web development few years ago doing freelance projects, which was then followed by a supericious interest in UX/UI development. I studied economics and management in school, but not in order to persue my career into that field, only to make my brain smarter, and absorb different ideas, and learn distinctive aspects quicker. Although talking big marketing words and clichés is not my favourite bit, it was still pretty cool because this experience helped me to learn how to deal with clients and stakeholders, and gain knowledge of how important it is to understand your client’s needs in order to achieve the final “wow” effect.
         </p>
 
           <br>
           </div>
           <div class="col-lg-4">
-        <p class="paraAboutTwo">
-        When starting a project, I always take my time to plan, research and experiment, before kicking off with the final design work. My aim is to create such a strong impression on the end user that they have to act after seeing the design piece.
+        <p class="paraAboutTwo pt-4">
+        However, it soon became apparent that I really enjoyed spending time with the designers and developers and understanding how they do their magic. I started trying it myself and I naturally gravitated to web design and development.
+        Shortly after, I embarked on a freelance career which gave me the freedom to work on all sorts of projects with different kinds of businesses - from charities and environmental organisations, to fitness instructors, boxing events and weapons resellers. Some people find it shocking that I pride myself with creating the only online shop that sells a dildo in the shape of Queen Elizabeth II, but the braver the project, the more I enjoy working on it.
         </p>
 
           <br>
 
         <p class="paraAboutTwo">
-        My specialty is web design and front-end development, working on pixel tricks in Photoshop and Adobe Illustrator and turning them into beautiful, semantic HTML & CSS. I have solid experience with CMS and frameworks like Wordpress, Magento, CS-Cart, Joomla, Foundation and Twitter Bootstrap.
+        My specialty is web design and front-end development, working on pixel tricks in Photoshop and Adobe Illustrator and turning them into beautiful, semantic HTML & CSS as well as making them interactive through the intelligence of JavaScript. I have solid experience with frameworks like Wordpress and Twitter Bootstrap.
         </p>
 
           <br>
 
         <p class="paraAboutTwo pb-5">
-        My interests do, however, extend beyond websites, and I love creating brand logos, newsletters and print design.</p>
+        My interests do, however, extend beyond websites, and I love creating brand logos, newsletters, print design, films, music, and almost anything which embarks my creativity. I'm a magician, I can do anything, better than anyone else.</p>
         </p>
         </div>
         </div>
